RESOLVED FIXED118953
Java Updater not launched on Lion and Mountain Lion
https://bugs.webkit.org/show_bug.cgi?id=118953
Summary Java Updater not launched on Lion and Mountain Lion
Anders Carlsson
Reported 2013-07-21 11:47:48 PDT
Java Updater not launched on Lion and Mountain Lion
Attachments
Patch (2.25 KB, patch)
2013-07-21 11:49 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2013-07-21 11:49:04 PDT
Sam Weinig
Comment 2 2013-07-21 11:50:46 PDT
Comment on attachment 207210 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=207210&action=review > Source/WebKit2/UIProcess/Plugins/mac/PluginProcessProxyMac.mm:413 > + NSURL *url = [NSURL URLWithString:urlString]; > + if (![url isFileURL]) > + return false; > > - return [[NSURL URLWithString:urlString] isEqual:javaUpdaterURL]; > + NSString *javaUpdaterPath = [NSString pathWithComponents:[NSArray arrayWithObjects:(NSString *)pluginProcessAttributes.moduleInfo.path, @"Contents/Resources/Java Updater.app", nil]]; > + return [url.path isEqualToString:javaUpdaterPath]; This could either use a comment.
Anders Carlsson
Comment 3 2013-07-21 11:54:26 PDT
Note You need to log in before you can comment on or make changes to this bug.