Java Updater not launched on Lion and Mountain Lion https://bugs.webkit.org/show_bug.cgi?id=118953 <rdar://problem/14496721>

Reviewed by Sam Weinig.

On Lion and Mountain Lion, -[NSURL isEqual:] will return NO for two file URLs if one of
them has "localhost" specified, even if the paths are otherwise equal. Work around this by
comparing the paths directly.

* UIProcess/Plugins/mac/PluginProcessProxyMac.mm:
(WebKit::isJavaUpdaterURL):

Canonical link: https://commits.webkit.org/136787@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152950 268f45cc-cd09-0410-ab3c-d52691b4dbfc